--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,14 @@
+auxiliary.org-netbeans-modules-javascript-nodejs.run_2e_enabled=false
+browser.autorefresh.Chrome=true
+browser.autorefresh.Chrome.INTEGRATED=true
+browser.highlightselection.Chrome=true
+browser.highlightselection.Chrome.INTEGRATED=true
+browser.run=true
+file.reference.public_html-nbproject=nbproject
 file.reference.testweb-public_html=public_html
 file.reference.testweb-test=test
 files.encoding=UTF-8
-site.root.folder=${file.reference.testweb-public_html}
-test.folder=${file.reference.testweb-test}
+site.root.folder=${file.reference.public_html-nbproject}
+start.file=index.html
+test.folder=${file.reference.public_html-nbproject}
+web.context.root=/public_html
